apps/rocketchat/rocketchat-save-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    description: Route for application's http service.
  labels:
    app: rocketchat
  name: rocketchat
  namespace: e5imao-prod
spec:
  host: chat.pathfinder.gov.bc.ca
  port:
    targetPort: 3000-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: rocketchat
    weight: 100
  wildcardPolicy: None
